cabal-version:          3.4
name:                   simulated-annealing
version:                0.1.0.0
-- synopsis:
-- description:
author:                 Laurence Pettitt
maintainer:             laurencepettitt@gmail.com

library
    exposed-modules:    GTSP
                        TSPLIB95
                        SimulatedAnnealing
                        SimulatedAnnealing.TSP
    build-depends:      base ^>=4.14.1.0,
                        containers ^>=0.6.4.1,
                        mtl ^>=2.2.2,
                        text ^>=1.2.4.1,
                        random ^>=1.2.0,
                        scientific ^>=0.3.7.0,
                        megaparsec ^>=9.0.1,
                        parser-combinators ^>=1.3.0
    hs-source-dirs:     src
    default-language:   Haskell2010

executable main
    main-is:            Main.hs
    build-depends:      base ^>=4.14.1.0,
                        simulated-annealing,
                        containers ^>=0.6.4.1,
                        mtl ^>=2.2.2,
                        text ^>=1.2.4.1,
                        random ^>=1.2.0,
                        random-shuffle ^>=0.0.4,
                        directory ^>=1.3.6.1,
                        optparse-applicative ^>=0.16.1.0
    hs-source-dirs:     app
    default-language:   Haskell2010


Test-Suite test-simulated-annealing
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:      base ^>=4.14.1.0,
                        hspec ^>=2.8.2,
                        simulated-annealing
