cabal-version:          3.4
name:                   simulated-annealing
version:                0.1.0.0
-- synopsis:
-- description:
author:                 Laurence Pettitt
maintainer:             laurencepettitt@gmail.com

library
    exposed-modules:    GTSP
                        TSPLIB95
                        SimulatedAnnealing
                        SimulatedAnnealing.TSP
    build-depends:      base,
                        containers,
                        mtl,
                        text,
                        random,
                        scientific,
                        megaparsec,
                        aeson,
                        parser-combinators
    hs-source-dirs:     src
    default-language:   Haskell2010

executable main
    main-is:            Main.hs
    build-depends:      base,
                        simulated-annealing,
                        containers,
                        mtl,
                        text,
                        random,
                        random-shuffle,
                        directory,
                        optparse-applicative,
                        aeson,
                        bytestring
    hs-source-dirs:     app
    default-language:   Haskell2010


Test-Suite test-simulated-annealing
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    build-depends:      base,
                        hspec,
                        simulated-annealing
